# wagtail-cms-basic-site

./: .gitignore  .replit  db.sqlite3  design_guidelines.md  manage.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: branding-1766337811932.json  branding-1766337813677.json  content-1766337811472.md  content-1766337812961.md
booking/: admin.py  models.py  views.py
booking/migrations/: 0001_initial.py
client/src/: index.css
fleet/: models.py
fleet/migrations/: 0001_initial.py
flymex_site/: asgi.py  settings.py  urls.py  wsgi.py
home/: models.py
home/management/commands/: setup_site.py  smoke_test.py
home/migrations/: 0001_initial.py  0002_contactpage_experiencepage_genericpage.py
static/css/: main.css
static/js/: main.js
staticfiles/js/: main.js
templates/: base.html
templates/blocks/: cta_block.html  experience_block.html  fleet_highlight_block.html  hero_block.html  image_text_block.html  membership_card_block.html  memberships_block.html  safety_certifications_block.html  services_block.html
templates/fleet/: fleet_page.html
templates/home/: contact_page.html  experience_page.html  generic_page.html  home_page.html
templates/partials/: flight_modal.html  footer.html  header.html
