[project]
name = "wagtail-cms-basic-site"
version = "0.1.0"
description = "FlyMex Aero - Luxury private jet charter website built with Django Wagtail CMS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0",
    "wagtail>=7.0",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "Pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[tool.uv]
managed = true
